# fastapi_hw

./: db.py  main.py  models.py  pyproject.toml  schemas.py
